k8-project-2/staging/postgre-staging.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: staging
  labels:
    app: postgres
spec:
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: 5432
      name: postgresql
  selector:
    app: postgres
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
  namespace: staging
  labels:
    app: postgres
spec:
  replicas: 1
  strategy:
    type: Recreate # Disk çakışmasını (RWO) önlemek için Recreate kullanılır
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgresql
          image: postgres:16-alpine
          ports:
            - containerPort: 5432
              name: postgresql
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
              subPath: pgdata # lost+found çakışmasını engellemek için subPath şarttır
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-pvc
