k8-project-2/staging/staging-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
   name: staging-ingress
   namespace: staging
spec:
  ingressClassName: nginx
  rules:
    - host : staging.lab.internal  
      htpp:
       paths:
          - path: /
            pathType: Prefix
            backend: 
               service :
                  name : web-api-service
                  port:
                    number: 8000
